--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8080
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jxc?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://192.168.227.128:3306/jxc?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456Abc@
 
 # MyBatis
 mybatis.mapper-locations=classpath:/mapper/*.xml
